Added notebooks for the 100Mbps case in Cloudlab

--- a/CloudLab/Experiments/1Gbps/HTB with offload/Run Experiment.ipynb
+++ b/CloudLab/Experiments/1Gbps/HTB with offload/Run Experiment.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "\n",
     "sudo tc qdisc del dev $router_egress_name root\n",
-    "sudo tc qdisc add dev $router_egress_name root handle 1: bfifo limit 0.1MB\n",
+    "sudo tc qdisc add dev $router_egress_name root handle 1: bfifo limit 100kb\n",
     "sudo mlnx_qos -i $router_egress_name -p 0,0,0,0,0,0,0,0 -r 1,0,0,0,0,0,0,0\n",
     "```"
    ]
